--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,10 @@
 html {
 	background-color: #E4F4FA;
 }
+
+.flash {
+	background-color: #d9534f;
+	text-align: center;
+	color: white;
+	margin-bottom: 2em;
+}
