--- a/app/assets/stylesheets/surveys.scss
+++ b/app/assets/stylesheets/surveys.scss
@@ -9,6 +9,7 @@
 	border: 1px solid black;
 	border-radius: 2px;
 	margin-top: 2em;
+	margin-bottom: 3em;
 	padding-top: 0.5em;
 	.logo-image {
 		margin-bottom: 2em;
