--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+  	<% flash.each do |name, msg| -%>
+      <%= content_tag :div, msg, class: "col-md-12 flash" %>
+    <% end -%>
+    
     <%= yield %>
   </body>
 </html>
