--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,5 +1,7 @@
 <div class="survey-form-container col-md-6 col-md-offset-3">
 	<%= form_for @survey, url: {action: "update"} do |f| %>
+	  <%= render 'shared/error_messages', object: f.object %>
+	  
 	  <div class="logo-image col-md-6 col-md-offset-4">
 	  	<%= image_tag "/assets/logo.jpg", class: "logo" %>
 	  </div>
