--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -7,74 +7,82 @@
 	  </div>
 
 	  <div class="form-group row">
-	  	<div class="col-md-4">
-	  		<%= f.label :annual_revenue, 'Annual Revenue', class: "col-form-label" %><br />
+	  	<div class="label-container col-md-4">
+	  		<%= f.label :annual_revenue, 'Annual Revenue', class: "col-form-label", 'data-toggle' => 'tooltip', 'data-placement' => 'top', :title => '', 'data-original-title' => "Your business's annual revenue"  %><br />
 	  	</div>
-	  	<div class="col-md-7">
-	  		<%= f.text_field :annual_revenue, class: "form-control" %><br />
-	  	</div>
-	  </div>
-
-	  <div class="form-group row">
-	  	<div class="col-md-4">
-	  		<%= f.label :number_of_employees, 'Number of Employees', class: "col-form-label" %><br />
-	  	</div>
-	  	<div class="col-md-7">
-	  		<%= f.text_field :number_of_employees, class: "col-md-6 form-control" %><br />
+	  	<div class="col-md-6 input-group">
+	  		<div class="input-group-addon">$</div>
+	  		<%= f.text_field :annual_revenue, placeholder: "2,000,000,000", class: "form-control" %><br />
 	  	</div>
 	  </div>
 
 	  <div class="form-group row">
-	  	<div class="col-md-4">
-	  		<%= f.label :annual_hours_per_employee, 'Annual Hours per Employee', class: "col-form-label" %><br />
+	  	<div class="label-container col-md-4">
+	  		<%= f.label :number_of_employees, 'Number of Employees', class: "col-form-label", 'data-toggle' => 'tooltip', 'data-placement' => 'top', :title => '', 'data-original-title' => "Total number of employees" %><br />
 	  	</div>
-	  	<div class="col-md-7">
-	  		<%= f.text_field :annual_hours_per_employee, class: "col-md-6 form-control" %><br />
-	  	</div>
-	  </div>
-
-	  <div class="form-group row">
-	  	<div class="col-md-4">
-	  		<%= f.label :incivility, 'Incivility', class: "col-form-label" %><br />
-	  	</div>
-	  	<div class="col-md-7">
-	  		<%= f.text_field :incivility, class: "col-md-6 form-control" %><br />
+	  	<div class="col-md-6 input-group">
+	  		<%= f.text_field :number_of_employees, placeholder: "3500", class: "col-md-6 form-control" %><br />
+	  		<div class="input-group-addon"> </div>
 	  	</div>
 	  </div>
 
 	  <div class="form-group row">
-	  	<div class="col-md-4">
-	  		<%= f.label :high_engagement, 'High Engagement', class: "col-form-label" %><br />
+	  	<div class="label-container col-md-4">
+	  		<%= f.label :annual_hours_per_employee, 'Annual Hours per Employee', class: "col-form-label", 'data-toggle' => 'tooltip', 'data-placement' => 'top', :title => '', 'data-original-title' => "Average number of hours worked annually per employee" %><br />
 	  	</div>
-	  	<div class="col-md-7">
-	  		<%= f.text_field :high_engagement, class: "col-md-6 form-control" %><br />
-	  	</div>
-	  </div>
-
-	  <div class="form-group row">
-	  	<div class="col-md-4">
-	  		<%= f.label :destructive_leadership, 'Destructive Leadership', class: "col-form-label" %><br />
-	  	</div>
-	  	<div class="col-md-7">
-	  		<%= f.text_field :destructive_leadership, class: "col-md-6 form-control" %><br />
+	  	<div class="col-md-6 input-group">
+	  		<%= f.text_field :annual_hours_per_employee, placeholder: "2080", class: "col-md-6 form-control" %><br />
+	  		<div class="input-group-addon"></div>
 	  	</div>
 	  </div>
 
 	  <div class="form-group row">
-	  	<div class="col-md-4">
-	  		<%= f.label :constructive_leadership, 'Constructive Leadership', class: "col-form-label" %><br />
+	  	<div class="label-container col-md-4">
+	  		<%= f.label :incivility, 'Incivility', class: "col-form-label", 'data-toggle' => 'tooltip', 'data-placement' => 'top', :title => '', 'data-original-title' => "What percentage of your employees will experience at least 1 act of incivility from another employee? (the exchange of seemingly inconsequential inconsiderate words and deeds that violate conventional norms of workplace conduct)" %><br />
 	  	</div>
-	  	<div class="col-md-7">
-	  		<%= f.text_field :constructive_leadership, class: "col-md-6 form-control" %><br />
+	  	<div class="col-md-6 input-group">
+	  		<%= f.text_field :incivility, placeholder: "25", class: "col-md-6 form-control form-group-right" %><br />
+	  		<div class="input-group-addon">%</div>
 	  	</div>
 	  </div>
 
 	  <div class="form-group row">
-	  	<div class="col-md-4">
-	  		<%= f.label :additional_rocs_investment, 'Additional ROCS Investment', class: "col-form-label" %><br />
+	  	<div class="label-container col-md-4">
+	  		<%= f.label :high_engagement, 'High Engagement', class: "col-form-label", 'data-toggle' => 'tooltip', 'data-placement' => 'top', :title => '', 'data-original-title' => "Percentage of employees that are highly engaged" %><br />
 	  	</div>
-	  	<div class="col-md-7">
-	  		<%= f.text_field :additional_rocs_investment, class: "col-md-6 form-control" %><br />
+	  	<div class="col-md-6 input-group">
+	  		<%= f.text_field :high_engagement, placeholder: "40", class: "col-md-6 form-control form-group-right" %><br />
+	  		<div class="input-group-addon">%</div>
+	  	</div>
+	  </div>
+
+	  <div class="form-group row">
+	  	<div class="label-container col-md-4">
+	  		<%= f.label :destructive_leadership, 'Destructive Leadership', class: "col-form-label", 'data-toggle' => 'tooltip', 'data-placement' => 'top', :title => '', 'data-original-title' => "Percentage of your leaders that are destructive from their followers point of view (e.g., petty tyranny, abusive supervision, social undermining, supervisory abuse, supervisor verbal abuse, unsupportive managerial behaviors, aversive leadership, destructive leadership, tyrannical leadership, despotic leadership; taking credit for the achievements of others, scapegoating, public ridiculing)?" %><br />
+	  	</div>
+	  	<div class="col-md-6 input-group">
+	  		<%= f.text_field :destructive_leadership, placeholder: "25", class: "col-md-6 form-control form-group-right" %><br />
+	  		<div class="input-group-addon">%</div>
+	  	</div>
+	  </div>
+
+	  <div class="form-group row">
+	  	<div class="label-container col-md-4">
+	  		<%= f.label :constructive_leadership, 'Constructive Leadership', class: "col-form-label", 'data-toggle' => 'tooltip', 'data-placement' => 'top', :title => '', 'data-original-title' => "Percentage of your leaders that are constructive from their followers point of view? (i.e., reaching common agreements about work and facilitating individual and collective efforts to achieve shared goals)" %><br />
+	  	</div>
+	  	<div class="col-md-6 input-group">
+	  		<%= f.text_field :constructive_leadership, placeholder: "25", class: "col-md-6 form-control form-group-right" %><br />
+	  		<div class="input-group-addon">%</div>
+	  	</div>
+	  </div>
+
+	  <div class="form-group row">
+	  	<div class="label-container col-md-4">
+	  		<%= f.label :additional_rocs_investment, 'Additional ROCS Investment', class: "col-form-label", 'data-toggle' => 'tooltip', 'data-placement' => 'top', :title => '', 'data-original-title' => "Additional consulting, workshops, coaching, etc., beyond True Tilt, Tilt 365, True Tilt Team Profile, and debriefs" %><br />
+	  	</div>
+	  	<div class="col-md-6 input-group">
+	  		<div class="input-group-addon">$</div>
+	  		<%= f.text_field :additional_rocs_investment, placeholder: "2,000,000", class: "col-md-6 form-control" %><br />
 	  	</div>
 	  </div>
 
